syntax = "proto3";
package datamodels;
import "prods.proto";

message ProdsRequest {
    int32 size = 1;
}

message ProdListResponse {
    repeated ProdModel data=1;
}

service ProdService {
    rpc GetProdsList(ProdsRequest) returns(ProdListResponse);
}
